--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ iced = { version = "0.13.1", features = ["svg", "image"] }
 iced_aw = { version = "0.11.0", features = ["drop_down", "tab_bar"] }
 iced_fonts = "0.1.1"
 iced_gif = { version = "0.13.0", git = "https://github.com/VladOS-0/iced_gif" }
+iced_toasts = "0.1.1"
 image = "0.25.5"
 log = "0.4.22"
 rfd = "0.15.1"
