--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,27 @@
 [package]
 name = "dmi_assistant"
-version = "0.0.12"
-edition = "2021"
+version = "0.0.13"
+edition = "2024"
 
 [dependencies]
 arboard = "3.4.1"
 bytes = "1.9.0"
+chrono = "0.4.42"
+directories = "6.0.0"
 dmi = "0.3.7"
+dotenv = "0.15.0"
 fern = "0.7.0"
 iced = { version = "0.13.1", features = ["svg", "image"] }
 iced_aw = { version = "0.11.0", features = ["drop_down", "tab_bar"] }
-iced_fonts = "0.1.1"
+iced_fonts = { version = "0.1.1", features = ["nerd"]}
 iced_gif = { version = "0.13.0", git = "https://github.com/VladOS-0/iced_gif" }
 iced_toasts = "0.1.1"
 image = "0.25.5"
 log = "0.4.22"
 rfd = "0.15.1"
+serde = "1.0.228"
 thiserror = "2.0.6"
+toml = "0.9.8"
 walkdir = "2.5.0"
 
 [build-dependencies]
