--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "dmi_assistant"
-version = "0.0.16"
+version = "0.0.17"
 edition = "2024"
 
 [dependencies]
 arboard = "3.4.1"
 bytes = "1.9.0"
 chrono = "0.4.42"
+clipboard-win = "5.4.0"
 directories = "6.0.0"
 dmi = "0.3.7"
 dotenv = "0.15.0"
