--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dmi_assistant"
-version = "0.0.22"
+version = "0.0.23"
 edition = "2024"
 
 [dependencies]
@@ -21,6 +21,7 @@ image = "0.25.5"
 log = "0.4.22"
 rfd = "0.15.1"
 serde = { version = "1.0.228", features = ["derive"]}
+tempfile = "3.23.0"
 thiserror = "2.0.6"
 toml = "0.9.8"
 walkdir = "2.5.0"
