--- a/assets/fonts/fontello.toml
+++ b/assets/fonts/fontello.toml
@@ -6,8 +6,15 @@ save = "entypo-floppy"
 trash = "typicons-trash"
 folder = "fontawesome-folder-open"
 iconfile = "fontawesome-file-image"
-open = "fontawesome-doc-text-inv"
+file = "fontawesome-doc-text-inv"
 text_cursor = "fontawesome-i-cursor"
 palette = "entypo-palette"
 settings = "fontawesome-cog-alt"
 search = "fontawesome-search"
+magnifying = "mfglabs-zoom-in"
+resize = "fontawesome-resize-full"
+resize2 = "iconic-resize-full-alt"
+resize_height = "iconic-resize-vertical"
+resize_width = "iconic-resize-horizontal"
+video = "modernpics-videocam-alt"
+info = "iconic-info"
